# Vision_AI

./: .gitignore  README.md  cube.py  cube_config.txt  robot_config.txt  utils.py
color-detect/: README.md
yumi_ws/src/scene_coppelia/: yumi_scene.ttt  yumi_scene_simple_cube.ttt
yumi_ws/src/yumi_cube/: CMakeLists.txt  package.xml
yumi_ws/src/yumi_cube/config/: parameters.yaml
yumi_ws/src/yumi_cube/include/yumi_cube/: primitives.hpp
yumi_ws/src/yumi_cube/launch/: yumi_cube.launch.py
yumi_ws/src/yumi_cube/scripts/: locate_cube_LINUX.py  locate_cube_MACOS.py
yumi_ws/src/yumi_cube/src/: main.cpp  primitives.cpp
